Fixed a glitch with the favourite collections dropdown, the z-index was too low (weirdly, it was at 9999, need to look into this in the future

--- a/static/css/mapviewer.css
+++ b/static/css/mapviewer.css
@@ -249,7 +249,7 @@ body, html {
   min-width: 200px;
   box-shadow: var(--shadow);
   border-radius: var(--radius);
-  z-index: 9999;
+  z-index: 10002;
   max-height: 400px;
   overflow-y: auto;
   border: 1px solid var(--border);
@@ -258,6 +258,7 @@ body, html {
   transition: opacity 0.15s ease, transform 0.15s ease;
   pointer-events: none;
   display: block;
+  visibility: hidden;
 }
 
 .theme-collections-wrapper #themeCollectionsMenu.show {
@@ -265,6 +266,7 @@ body, html {
   transform: translateY(0);
   pointer-events: auto;
   display: block !important;
+  visibility: visible;
 }
 
 #themeCollectionsMenu a {
